fix: stabilize stations and scheduling